applications/virtual-fly-brain/client/src/css/base.less
html{
    height:100%;
}
body{
    height:100%;
}
.vfb-geppetto-frame, .vfb-geppetto-frame iframe, .vfb-geppetto-frame object, .vfb-geppetto-frame embed {
    width: 100%;
    height: calc(100vh - 43px);
}
.vfb-geppetto-frame{
    position: relative;
    top: 0px;
}
.vfb-splash-screen{
    position: absolute;
    top: 0px;
    background: rgba(100, 100, 100, 0.80);
    height: 100vh;
    width: 100vw;
    z-index: 100;
}
.vfb-splash-screen .gpt-fly.fa-spin{
    font-size: 20vh;
    color: #0d96c7;
    width: 20vh;
    height: 20vh;
    margin-top: 8vh;
}
.vfb-splash-screen h1{
    padding-top:15vh;
}
.vfb-splash-screen h2{
    padding-top:8vh;
}

.top-icon {
    color: #0d96c7;
    cursor:pointer;
    font-size:17px!important;
    float:left;
    margin-right:5px;
}
.top-icon:hover {
    color:white;
}
.uk-navbar {
    background: #141a1f !important;
}
.uk-navbar-content{
    padding-top: 10px;
    padding-left: 25px;
}
.uk-navbar-content a{
    color: whitesmoke !important;
    text-decoration: none;
    font-family: 'Barlow Condensed', 'Khand', sans-serif;
    font-size: 18px;
}
.logo {
    max-height: 50%;
    margin: 10px;
}
.top-menu{
    color: #0d96c7;
    font-size: 15px;
    cursor: pointer;
    font-family: 'Barlow Condensed', 'Khand', sans-serif;
    margin-right: 10px;
    margin-top:12px;
}
.top-menu:hover{
    color:white;
}

#vfb-content-title {
    text-align: center;
    font-family: 'Barlow Condensed', 'Khand', sans-serif;
    color:#11bffe;
}
.uk-slideshow>li {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%!important;
}

.uk-cover-background {
    background-size: 100%;
}

.uk-overlay-panel {
    padding:0;
}
.uk-slidenav-position{
    height: 100%;
}

.vfbcontent div ul {
    font-size: 14px;
    font-weight: 200;
    height: 100%!important;
    color: whitesmoke;
    font-family: 'Barlow Condensed', 'Khand', sans-serif;
}
.vfbcontent a {
    color: #11bffe;
    text-decoration: none;
    line-height: inherit;
    cursor:pointer;
}
.vfbcontent a:hover {
    color:white;
}
.content-image{
    width:200px;
    float:right;
    clear:both;
}

.row{
    margin-bottom:40px;
}

.uk-overlay-bottom {
    top: 50%;
    height: 20vh;
    padding: 20px;
    margin: 0 auto;
    font-size: 4vh;
    line-height: 5vh;
    text-align: center;
    left: 0;
    color: whitesmoke;
    background: rgba(0, 0, 0, 0.32);
    right: 0;
}

.top-bar-section .dropdown li {
    border-right-style: inset;
    border-top-style: inset;
    border-right-width: 0.5px;
    border-top-width: 0.5px;
    border-right-color: grey;
    border-top-color: grey;
}
body {
    background-color: rgb(81, 83, 89) !important;
}
.vfbcontent .orbit-container ul li img{
    width: 100%;
}
.uk-navbar-nav>li>a {
    color: #fc6320 !important;
}
.socialmedia img {
    cursor: pointer;
    max-height: 15px;
    float: right;
}
.uk-navbar-brand div {
    top: 8px;
    font-size: 40px;
    position: absolute;
}
.uk-navbar-brand {
    width: 70px;
}

.vfb-overlay-label {
    position:absolute;
    color:white;
    font-size: 20px;
}

.vfb-overlay-label p {
    font-size: 15px;
}

audio, canvas, img, svg, video {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
    margin : 0;
 }

.position-toolbar  {
  button {
    color: rgba(255, 255, 255, 0.8);
  }
}

.scrollbar::-webkit-scrollbar-track {
  margin-block: 5px;
}

.scrollbar::-webkit-scrollbar {
  width: 1.4em;  /* Total width including `border-width` of scrollbar thumb */
  height: 0;
}
.scrollbar::-webkit-scrollbar-thumb {
  height: 0.5em;
  border: 0.5em solid rgba(0, 0, 0, 0);  /* Transparent border together with `background-clip: padding-box` does the trick */
  background-clip: padding-box;
  -webkit-border-radius: 1em;
  background-color: rgba(58, 58, 58, 0.8);
  -webkit-box-shadow: inset 0 0 0 1px rgba(58, 58, 58, 0.8);
}
.scrollbar::-webkit-scrollbar-button {
  width: 0;
  height: 0;
  display: none;
}
.scrollbar::-webkit-scrollbar-corner {
  background-color: transparent;
}

